[project]
name = "avant_jiyorude"
version = "0.0.1"
authors = [
  { name="Jordy Veenstra / A Pixelated Point of View", email="jordy.gaptx@gmail.com" },
]
description = "Random data-generating algorithm for experimental Machinima post-production"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
GitHub = "https://github.com/jiyorude/avant"
Issues = "https://github.com/jiyorude/avant/issues"
Homepage = "#"
