[project]
name = "q3avant"
version = "0.2.0"
authors = [{name="Jordy Veenstra / A Pixelated Point of View" <jordy.gaptx@gmail.com>"}]
description = "Random data-generating algorithm for experimental Quake III Arena Machinima (post-)production"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "inquirer>=3.2.3",
  "pymongo>=4.6.1",
  "reportlab>=4.0.9"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
PyPi = "#"
GitHub = "https://github.com/jiyorude/avant"
Issues = "https://github.com/jiyorude/avant/issues"
Documentation = "https://avant-docs.vercel.app/"
Bitbucket = "https://bitbucket.org/appov/avant/src/main/"
