[project]
name = "avant_jiyorude"
version = "0.0.2"
authors = [
  { name="Jordy Veenstra / A Pixelated Point of View", email="jordy.gaptx@gmail.com" },
]
description = "Random data-generating algorithm for experimental, depth-based Quake III Arena Machinima (post-)production"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
GitHub = "https://github.com/jiyorude/avant"
Issues = "https://github.com/jiyorude/avant/issues"
Bitbucket = "https://bitbucket.org/appov/avant/src/main/"
